@@ -1,6 +1,7 @@
 Version 2.02.83 - 
 ===================================
   Always use O_DIRECT when opening block devices to check for partitioning.
+  Improve lvcreate "insufficient extents" errors to "insufficient free space".
 
 Version 2.02.82 - 24th January 2011
 ===================================
